[gd_scene load_steps=15 format=2]

[ext_resource path="res://personagem/personage,.tscn" type="PackedScene" id=1]
[ext_resource path="res://DALL·E 2023-03-16 21.00.23 - interior de uma casa em pixels 2d.png" type="Texture" id=2]
[ext_resource path="res://cenario/kisspng-pixel-art-television-5b004793aab204.4979899315267449796992.png" type="Texture" id=3]
[ext_resource path="res://personagem/mae.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonte/Retro Gaming.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://cena2.gd" type="Script" id=6]
[ext_resource path="res://area.gd" type="Script" id=7]
[ext_resource path="res://cenario/i586348.png" type="Texture" id=8]
[ext_resource path="res://cenario/playstation.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 397.75, 184 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24.75, 185.75 )

[node name="cena2" type="Node2D"]
script = ExtResource( 6 )

[node name="Dall·E2023-03-16210023-InteriorDeUmaCasaEmPixels2d" type="Sprite" parent="."]
position = Vector2( 508, 285 )
scale = Vector2( 1.04883, 0.666016 )
texture = ExtResource( 2 )

[node name="Node2D" parent="." instance=ExtResource( 4 )]
position = Vector2( -3721, -1322 )
scale = Vector2( 6, 6 )

[node name="area" type="Area2D" parent="."]
position = Vector2( 115, 303 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 7 )

[node name="Kisspng-pixel-art-television-5B004793Aab2044979899315267449796992" type="Sprite" parent="area"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
position = Vector2( -140.25, 44 )
shape = SubResource( 2 )

[node name="I586348" type="Sprite" parent="area"]
visible = false
position = Vector2( 28, 19.9999 )
scale = Vector2( 0.267063, 0.348677 )
texture = ExtResource( 8 )

[node name="KinematicBody2D" parent="." groups=["personagem"] instance=ExtResource( 1 )]
position = Vector2( -2666, -2021 )
scale = Vector2( 8, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorPicker" type="ColorRect" parent="."]
margin_left = 12.0
margin_top = 456.0
margin_right = 1012.0
margin_bottom = 594.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="ColorPicker"]
margin_left = 19.0
margin_top = 23.0
margin_right = 959.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 1 )
text = "Demorou pra caceta em, Vitinho! Puta merda! Me ajude logo, eu quero 
assistir o BBB 23.A televisão estã logo ali..."

[node name="irr" type="Button" parent="ColorPicker"]
margin_left = 926.0
margin_top = 90.0
margin_right = 959.0
margin_bottom = 127.0
text = "IR"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 35.0
margin_top = 451.0
margin_right = 996.0
margin_bottom = 583.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 7.0
margin_top = 36.0
margin_right = 971.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 3 )
text = "Obrigado, Vitinho da TV! Agora vou poder assistir meu Big Brother 
Brasil 2033. FORA FREDDDD.. Olhe para a Televisão."

[node name="sai" type="Button" parent="ColorRect"]
margin_left = 910.0
margin_top = 86.0
margin_right = 940.0
margin_bottom = 122.0
text = "IR"

[node name="Playstation" type="Sprite" parent="."]
visible = false
position = Vector2( 121, 392 )
scale = Vector2( 0.162068, 0.169545 )
texture = ExtResource( 9 )

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_left = 21.0
margin_top = 454.0
margin_right = 1006.0
margin_bottom = 587.0
color = Color( 0, 0, 0, 1 )

[node name="continua" type="Button" parent="ColorRect2"]
margin_left = 871.0
margin_top = 85.0
margin_right = 965.0
margin_bottom = 122.0
text = "CONTINUA..."

[node name="Label" type="Label" parent="ColorRect2"]
margin_left = 11.0
margin_top = 25.0
margin_right = 914.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 4 )
text = "O serviço deu 500 conto. PIX ou cartão? E te dei um playstation de
brinde, original e autografado por mim..."

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -24, 374 )
shape = SubResource( 5 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 1041, 365 )
shape = SubResource( 5 )

[connection signal="body_entered" from="area" to="area" method="_on_area_body_entered"]
[connection signal="pressed" from="ColorPicker/irr" to="." method="_on_irr_pressed"]
[connection signal="pressed" from="ColorRect/sai" to="." method="_on_sai_pressed"]
[connection signal="pressed" from="ColorRect2/continua" to="." method="_on_continua_pressed"]
